<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/pdetails_pname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:text="@string/pdetails_pname_en" />

    <TextView
        android:id="@+id/pdetails_date_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop = "18dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/pdetails_date_heading_en" />

    <TextView
        android:id="@+id/pdetails_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop = "18dp"
        android:gravity="center"
        android:text="@string/pdetails_date_text_en" />

    <TextView
        android:id="@+id/pdetails_desc_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop = "18dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/pdetails_desc_heading_en" />

    <TextView
        android:id="@+id/pdetails_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop = "18dp"
        android:gravity="center"
        android:text="@string/pdetails_desc_text_en" />

    <ImageView
        android:id="@+id/bio_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/pdetails_link_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop = "18dp"
        android:gravity="bottom|center"
        android:text="@string/pdetails_link_text_en" />
</LinearLayout>