<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/projectlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/plist_heading_en"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="projectlist_title"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="30dp" />

    <TableLayout
        android:id="@+id/projectlist_table"
        android:layout_width="0dp"
        android:layout_height="268dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectlist_title"> <!-- stretch the second column of the layout-->

        <!-- first row of the table layout-->
        <TableRow

            android:id="@+id/project1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/project1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p1_name_en"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/project1_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p1_desc_en"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/project1_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p1_link_en"
                android:textColor="#000"
                android:textSize="12dp" />

        </TableRow>

        <TableRow

            android:id="@+id/project2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/project2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p2_name_en"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/project2_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p2_desc_en"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/project2_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p2_link_en"
                android:textColor="#000"
                android:textSize="12dp" />

        </TableRow>

        <TableRow

            android:id="@+id/project3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <!-- first element of the row-->
            <TextView

                android:id="@+id/project3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p3_name_en"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/project3_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p3_desc_en"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/project3_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/plist_p3_link_en"
                android:textColor="#000"
                android:textSize="12dp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>