<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/options_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/options_heading_en"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/language_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:text="@string/options_language_select_en"
            android:textSize="12dp"/>

        <Spinner
            android:id="@+id/options_language_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:entries="@array/options_language_options"
            android:spinnerMode="dropdown"
            android:paddingBottom="20dp"/>

    </LinearLayout>

    <Switch
        android:id="@+id/options_darkmode_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_darkmode_select_en"
        android:checked="true"/>

</LinearLayout>